# overseer

./: .gitignore  .overseer  .pre-commit-config.yaml  AGENTS.md  README.md  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  cut-release.yml  release.yml  security.yml
.overseer/: tasks.db  tasks.db-shm  tasks.db-wal
.overseer.bak/: tasks.db
docs/: AGENTS.md  ARCHITECTURE-V2.md  ARCHITECTURE.md  CLI.md  MCP.md  TASKS.md  TECHNICAL_DEEP_DIVE.md  codemode-blog.md  codemode-research.md  mcp-test-results.md  next-ready-implementation-plan.md  plan-vcs-mandatory.md  task-orchestrator-plan.md
docs/dex-skill-reference/: SKILL.md  cli-reference.md  examples.md  hierarchies.md  verification.md
docs/specs/: foo.json  task-viewer.md  ui-bundling-plan.md
host/: package-lock.json  package.json  pnpm-lock.yaml
host/src/: cli.ts  decoder.ts  executor.ts  index.ts  mcp.ts  types.ts  ui.ts
mcp/: AGENTS.md  README.md  package-lock.json  package.json  test-manual.md  tsconfig.json
mcp/src/: cli.ts  executor.ts  index.ts  server.ts  types.ts
npm/overseer/: package-lock.json  package.json
npm/scripts/: build-npm-package.mjs  build-ui.mjs  generate-platform-package.mjs  platforms.json  test-ui-bundle.mjs  (+1 more)
overseer/: AGENTS.md  Cargo.toml
overseer/src/: AGENTS.md  error.rs  id.rs  lib.rs  main.rs  output.rs  testutil.rs  types.rs
overseer/src/commands/: AGENTS.md  data.rs  learning.rs  mod.rs  task.rs  ui.rs  vcs.rs
overseer/src/core/: AGENTS.md  context.rs  mod.rs  task_service.rs  workflow_service.rs
overseer/src/db/: AGENTS.md  learning_repo.rs  mod.rs  schema.rs  task_repo.rs
overseer/src/vcs/: AGENTS.md  backend.rs  detection.rs  git.rs  jj.rs  mod.rs
overseer/tests/: git_integration_test.rs  learning_service_test.rs  task_service_test.rs
scripts/: generate-types.sh  install-runtime.sh  install.sh  list-runtime-versions.sh  package-runtime.sh  release_version.py  uninstall-runtime.sh
specs/: cli-dx-ux.md  task-archival-cancellation.md  ui-redesign.md
ui/: AGENTS.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
(+64 files in other folders)
