[package]
name = "overseer"
version = "0.4.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "os"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Storage
rusqlite = { version = "0.38", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "2.0"
owo-colors = { version = "4", features = ["supports-colors"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = "1.2"
open = "5"

# VCS backends
# JJ backend (jj-lib) [PRIMARY] - pin exact version due to API instability
jj-lib = "=0.37"
pollster = "0.4"

# Git backend (gix) [FALLBACK] - pure Rust git implementation
gix = { version = "0.77", default-features = false, features = ["index", "worktree-mutation", "status", "revision", "dirwalk"] }

[dev-dependencies]
tempfile = "3.24"

[profile.dev.package.jj-lib]
opt-level = 1

[profile.dev.package.gix]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
